Update titles and path favicon

--- a/index.html
+++ b/index.html
@@ -9,22 +9,22 @@
     <meta name="msapplication-navbutton-color" content="#5a1532">
     <meta name="apple-mobile-web-app-status-bar-style" content="#5a1532">
 
-    <link rel="apple-touch-icon" sizes="180x180" href="Assets/Favicon/Apple-touch-icon.png">
-    <link rel="icon" type="image/png" href="Assets/Favicon/Favicon-32x32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="Assets/Favicon/Favicon-16x16.png" sizes="16x16">
-    <link rel="shortcut icon" href="Assets/Favicon/Favicon.ico" type="image/x-icon" />
+    <link rel="apple-touch-icon" sizes="180x180" href="~/Favicon/Apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="~/Favicon/Favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="~/Favicon/Favicon-16x16.png" sizes="16x16">
+    <link rel="shortcut icon" href="~/Favicon/Favicon.ico" type="image/x-icon" />
 
-    <title>Rustyness - Mapa de Habilidades - Designer de Produto Vs. Vida Pessoal</title>
+    <title>Skills - Mapa de Habilidades - Designer de Produto Vs. Vida Pessoal</title>
     <meta name="description" content="Product Designer curioso que adora desafios, resolver problemas, fotografia e não dispensa uma boa partida de Magic.">
     <meta name="keywords" content="Product Designer, Inovação, Design, Criatividade, Produtos Digitais, User Interface Designer, Designer, CSS, HTML, Front-end, Prototipação, Wireframing, Desenvolvimento de Sites">    
     <link rel="canonical" href="http://rustyness.com.br/">
 
-    <meta property="og:title" content="Rustyness - Product Designer curioso que adora desafios, resolver problemas e fotografia.">
+    <meta property="og:title" content="Skills - Product Designer curioso que adora desafios, resolver problemas e fotografia.">
     <meta property="og:description" content="Product Designer curioso que adora desafios, resolver problemas, fotografia e não dispensa uma boa partida de Magic.">
     <meta property="og:image" itemprop="image" content="http://rustyness.com.br/Assets/Thumbnail.png">
     <meta property="og:url" content="http://rustyness.com.br/">
     <meta property="og:type" content="website">
-    <meta itemprop="name" content="Rustyness - Product Designer curioso que adora desafios, resolver problemas e fotografia."/>
+    <meta itemprop="name" content="Skills - Product Designer curioso que adora desafios, resolver problemas e fotografia."/>
     <meta name="twitter:card" content="summary_large_image">
     <meta property="og:site_name" content="Rustyness">
     <meta name="twitter:image:alt" content="Product Designer curioso que adora desafios, resolver problemas, fotografia e não dispensa uma boa partida de Magic."> 
