Update path favicon

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <meta name="msapplication-navbutton-color" content="#5a1532">
     <meta name="apple-mobile-web-app-status-bar-style" content="#5a1532">
 
-    <link rel="apple-touch-icon" sizes="180x180" href="~/Favicon/Apple-touch-icon.png">
-    <link rel="icon" type="image/png" href="~/Favicon/Favicon-32x32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="~/Favicon/Favicon-16x16.png" sizes="16x16">
-    <link rel="shortcut icon" href="~/Favicon/Favicon.ico" type="image/x-icon" />
+    <link rel="apple-touch-icon" sizes="180x180" href="https://rustyness.com.br/Assets/Favicon/Apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="https://rustyness.com.br/Assets/Favicon/Favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="https://rustyness.com.br/Assets/Favicon/Favicon-16x16.png" sizes="16x16">
+    <link rel="shortcut icon" href="https://rustyness.com.br/Assets/Favicon/Favicon.ico" type="image/x-icon" />
 
     <title>Skills - Mapa de Habilidades - Designer de Produto Vs. Vida Pessoal</title>
     <meta name="description" content="Product Designer curioso que adora desafios, resolver problemas, fotografia e não dispensa uma boa partida de Magic.">
